# productivity

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
ask/: Cargo.toml
ask/src/: anthropic_client.rs  host_info.rs  llm_client.rs  llm_response.rs  main.rs  path_utils.rs  printer.rs  response_parsing.rs
ask/src/anthropic_tools/: binary_tool.rs  filesystem.rs  http_request.rs  mod.rs  open.rs  package_manager.rs  rust_tools.rs  software_versions.rs
ask/src/ollama/: data_types.rs  mod.rs
ask/src/tools/: binary_tool.rs  cloud_context.rs  filesystem.rs  kubernetes.rs  mod.rs  rust_tools.rs  terraform.rs
golink/: Cargo.toml
golink/src/: main.rs
orgorg_client/: Cargo.toml
orgorg_client/src/: lib.rs  response_types.rs
productivity_config/: Cargo.toml
productivity_config/src/: lib.rs
