[workspace]

resolver = "2"
members = [
    "golink",
    "orgorg_client",
    "productivity_config",
]

[workspace.package]
authors = ["Bucket Robotics, Inc"]
categories = []
description = ""
documentation = "https://bucket.bot"
edition = "2021"
homepage = "https://bucket.bot"
keywords = []
license = "Apache-2.0"
publish = false
repository = "github.com/bucket-robotics/productivity"
version = "0.0.1"

[workspace.dependencies]
anyhow = "1.0.86"
argh = "0.1.12"
console = "0.15.8"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
directories = "5.0.1"
open = "5.3.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.207"
serde_json = "1.0.124"
thiserror = "1.0.63"
tokio = "1.39.2"
url = "2.4"
