[workspace]

resolver = "2"
members = ["ask", "golink", "orgorg_client", "productivity_config"]

[workspace.package]
authors = ["Bucket Robotics, Inc"]
categories = []
description = ""
documentation = "https://bucket.bot"
edition = "2021"
homepage = "https://bucket.bot"
keywords = []
license = "Apache-2.0"
publish = false
repository = "github.com/bucket-robotics/productivity"
version = "0.0.1"

[workspace.dependencies]
shlex = "1.3.0"
anyhow = "1.0.86"
argh = "0.1.12"
console = "0.15.8"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
directories = "5.0.1"
open = "5.3.0"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
schemars = "0.8.21"
serde = "1.0.209"
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = "1.40.0"
url = "2.5.2"
chrono = "0.4.38"
which = "6.0.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
indicatif = "0.17.8"
quick-xml = "0.36.1"
