[package]
name = "bucket_ask"
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "ask"
path = "src/main.rs"

[dependencies]
productivity_config = { path = "../productivity_config" }
anyhow.workspace = true
argh.workspace = true
chrono.workspace = true
console.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
open.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
which.workspace = true
