[package]
name = "orgorg_client"
description = "Client library for OrgOrg"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
reqwest.workspace = true
thiserror.workspace = true
url.workspace = true
