[package]
name = "productivity_config"
description = "Configuration for Bucket's productivity tools"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
directories.workspace = true
orgorg_client = { path = "../orgorg_client" }
